--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,18 @@
 Variables
 ===============
 */
-
+::-webkit-scrollbar {
+  width: 0.6em;
+}
+::-webkit-scrollbar-track {
+  background-color: rgb(255, 255, 255)0.479;
+  border-radius: 10px;
+  margin-block: .1 em;
+}
+::-webkit-scrollbar-thumb {
+  background:rgba(0, 255, 255, 0.589);
+  border-radius: 10px;
+}
 :root {
   /* dark shades of primary color*/
   --clr-primary-1: hsl(205, 86%, 17%);
